fix(logger): changed visibility of method, aligned CSS

--- a/assets/icon.css
+++ b/assets/icon.css
@@ -2,6 +2,18 @@
     width:18px !important;
 }
 
-#radical-excel-icon {
+#radical-export-button {
+    display: flex;
+    gap: 4px;
+    justify-content: center;
+    align-items: center;
+    padding: 6px;
+}
+
+#radical-export-button img {
     width: 24px;
+}
+
+#radical-plugin-list a {
+    font-size: 20px;
 }
